5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1573_1332.log
== TEST (2019-03-11 15:45:19) 
-- CODE:
aresta =5cm
area = 7.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:29) 
-- CODE:
aresta =5cm
area = 7.5cm
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:29) 
-- CODE:
aresta =5.0cm
area =7.5cm
 
print(round(area, 4))
7.5=3/2*(3*5)**0.5
-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:07) 
-- CODE:
aresta =5.0cm
area =7.5cm
 
print(round(7.5=3/2*(3*5)**0.5, 4))

-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:37) 
-- CODE:
aresta =5.0cm
area =7.5cm
 
print(round(7.5=3/2*(15)**0.5, 4))

-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:51:39) 
-- CODE:
aresta =5.0cm
area =7.5cm
 
print(round(7.5=3/2*(15)**0.5, 4))

-- EXECUTION TIME:
0.197046
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:40) 
-- CODE:
aresta =5.0cm
area =7.5cm
 
print(round(7.5=3/2*(15)**0.5, 4))

-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:52:57) 
-- CODE:
aresta =5.0cm
area =7.5cm
 
print(round(7.5=3/2*(15)**0.5,1))

-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:55:57) 
-- CODE:
aresta =5.0cm
area =7.5cm
 


-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:56:15) 
-- CODE:
aresta =5.0cm
area =
 


-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:56:17) 
-- CODE:
aresta =5.0cm
area =
 


-- EXECUTION TIME:
0.203876
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:56:18) 
-- CODE:
aresta =5.0cm
area =
 


-- ERROR:
File "XXXX", line 1
    aresta =5.0cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:56:30) 
-- CODE:
aresta =7.5cm
area =
 


-- ERROR:
File "XXXX", line 1
    aresta =7.5cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:56:33) 
-- CODE:
aresta =7.5cm
area =
 


-- EXECUTION TIME:
0.161346
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 1
    aresta =7.5cm
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:58:01) 
-- CODE:
aresta =5cm
area =
 


-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:58:25) 
-- CODE:
aresta =5cm
area =
 


-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:02:33) 
-- CODE:
aresta =
area

 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:02:55) 
-- CODE:
aresta =
area =

 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:03:00) 
-- CODE:
aresta =
area =

 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:04:08) 
-- CODE:
aresta =
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:05:18) 
-- CODE:
aresta =5
area = 
 
print(round(7.5, 1))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:05:30) 
-- CODE:
aresta =5
area = 
 
print(round(7.5, 1))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:05:52) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(7.5, 1))
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:06:00) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(7.5, 1))
-- EXECUTION TIME:
0.138767
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:06:11) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(7.5, 1))
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:06:32) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:06:39) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.186521
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:07:03) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:09:34) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(56.25, 2))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:09:49) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(56.25,2))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:09:54) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(56.25,1))
-- OUTPUT:
56.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:10:02) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(56.25,1))
-- EXECUTION TIME:
0.267821
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:10:33) 
-- CODE:
aresta =5
area = 7.5**2%
 
print(round(56.25,1))
-- ERROR:
File "XXXX", line 2
    area = 7.5**2%
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:11:07) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(56.25,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:11:43) 
-- CODE:
aresta =5
area = 7.5**2
 
print(round(56.25,4))
area = 56.25
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:13:48) 
-- CODE:
aresta =5
area = 3*5*3/2
 
print(round(56.25,4))
area = 56.25
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:14:05) 
-- CODE:
aresta =5
area = 3*5*3/2
 
print(round(area,4))

-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:14:25) 
-- CODE:
aresta =5
area = 3*5*3/2
 
print(round(area,4))

-- EXECUTION TIME:
0.196844
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:15:31) 
-- CODE:
aresta =5
area = 3*5*5*3/2
 
print(round(area,4))

-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:15:45) 
-- CODE:
aresta =5
area = 3*5*5*3/2
 
print(round(area,4))

-- EXECUTION TIME:
0.127789
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:23:00) 
-- CODE:
aresta =5
area = 
x = 3*5**2 
y = x**1/n
 
print(round(area,4))

-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:24:48) 
-- CODE:
aresta =5
area = A
x = 3*5**2 
y = x**1/n
z= y*3/2
A = z
 
print(round(area,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = A
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:25:27) 
-- CODE:
aresta =5
x = 3*5**2 
y = x**1/n
z= y*3/2
A = z
 
print(round(A,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = x**1/n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:26:05) 
-- CODE:
aresta =5
xEPA = 3*5**2 
yET = x**1/n
zETA= y*3/2
ALFA = z
 
print(round(A,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    yET = x**1/n
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:26:41) 
-- CODE:
aresta =5
XEPA = 3*5**2 
YET = x**1/n
ZETA= y*3/2
ALFA = z
 
print(round(A,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    YET = x**1/n
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:28:45) 
-- CODE:
aresta =5
XEPA = (3*5**2,75**1/n,8.66*3/2)
print(round(XEPA,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    XEPA = (3*5**2,75**1/n,8.66*3/2)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:29:25) 
-- CODE:
aresta =5
area = (3*5**2,75**1/n,8.66*3/2)
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3*5**2,75**1/n,8.66*3/2)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:30:26) 
-- CODE:
aresta =5
area = 12.99
print(round(area,4))
-- OUTPUT:
12.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:30:32) 
-- CODE:
aresta =5
area = 12.99
print(round(area,4))
-- EXECUTION TIME:
0.150719
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:30:40) 
-- CODE:
aresta =5
area = 12.99**2
print(round(area,4))
-- OUTPUT:
168.7401
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:30:42) 
-- CODE:
aresta =5
area = 12.99**2
print(round(area,4))
-- EXECUTION TIME:
0.159363
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
168.7401
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:31:49) 
-- CODE:
aresta =5
area = 168.75
print(round(area,4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:31:55) 
-- CODE:
aresta =5
area = 168.75
print(round(area,4))
-- EXECUTION TIME:
0.139408
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
168.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:32:13) 
-- CODE:
aresta =5cm
area = 168.75cm
print(round(area,4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:32:46) 
-- CODE:
aresta =5cm
area = 168.75,'cm'
print(round(area,4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:33:49) 
-- CODE:
aresta =5cm
PRINT((area) = 168.75,('cm'))
print(round(area,4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:36:20) 
-- CODE:
aresta =5
area = 13**2
print(round(area,4))
-- OUTPUT:
169
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:36:55) 
-- CODE:
aresta =5
area = 13**2
print(round(area,4))
-- OUTPUT:
169
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:37:01) 
-- CODE:
aresta =5
area = 13**2
print(round(area,4))
-- OUTPUT:
169
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:37:07) 
-- CODE:
aresta =5
area = 13**2
print(round(area,4))
-- EXECUTION TIME:
0.194549
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
169
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:37:31) 
-- CODE:
aresta =5
area = 12.3456
print(round(area,4))
-- OUTPUT:
12.3456
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:37:38) 
-- CODE:
aresta =5
area = 12.3456
print(round(area,4))
-- EXECUTION TIME:
0.165592
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.3456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:37:47) 
-- CODE:
aresta =5
area = 12.3456**2
print(round(area,4))
-- OUTPUT:
152.4138
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:37:52) 
-- CODE:
aresta =5
area = 12.3456**2
print(round(area,4))
-- EXECUTION TIME:
0.197883
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
152.4138
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:38:19) 
-- CODE:
aresta =5
area = 13**2
print(round(13**2,4))
-- OUTPUT:
169
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:38:28) 
-- CODE:
aresta =5
area = 13**2
print(round(13**2,3))
-- OUTPUT:
169
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:38:45) 
-- CODE:
aresta =5
area = 13**2
print(round(13**2,3))
-- EXECUTION TIME:
0.210061
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
169
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:32:54) 
-- CODE:
aresta =a
area = A=3/2*(3*a**2)**0.5
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta =a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:33:18) 
-- CODE:
aresta = 5
area = A=3/2*(3*a**2)**0.5
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = A=3/2*(3*a**2)**0.5
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:33:31) 
-- CODE:
aresta = 5
area = 3/2*(3*a**2)**0.5
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*(3*a**2)**0.5
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:33:58) 
-- CODE:
aresta = 5
area = 3/2*(3*a**2)**0.5.
print(round(area,4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3*a**2)**0.5.
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:34:22) 
-- CODE:
aresta = 5
area = (3/2*(3*a**2)**0.5)
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2*(3*a**2)**0.5)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:34:37) 
-- CODE:
aresta = 5
(3/2*(3*a**2)**0.5)
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    (3/2*(3*a**2)**0.5)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:34:59) 
-- CODE:
aresta = 5
area =(3/2*(3*5**2)**0.5)
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:35:11) 
-- CODE:
aresta = 5
area =3/2*(3*5**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:35:15) 
-- CODE:
aresta = 5
area =3/2*(3*5**2)**0.5
print(round(area,4))
-- EXECUTION TIME:
0.151379
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:35:41) 
-- CODE:
aresta = 5
area =3/2*(3*5**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:36:02) 
-- CODE:
aresta = 5
area =3/2*(3*5**2)**0.5
print(round(area**2,4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:36:07) 
-- CODE:
aresta = 5
area =3/2*(3*5**2)**0.5
print(round(area**2,4))
-- EXECUTION TIME:
0.156306
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
168.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:36:20) 
-- CODE:
aresta = 5
area =3/2*(3*5**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:43:23) 
-- CODE:
aresta = 5
area =(3/2*(3*5**2)**0.5)
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:48:28) 
-- CODE:
aresta = 5
area =(3/2*(3)*5**(2)**0.5)
print(round(area,4))
-- OUTPUT:
43.8233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:48:34) 
-- CODE:
aresta = 5
area =(3/2*(3)*5**(2)**0.5)
print(round(area,4))
-- EXECUTION TIME:
0.191332
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
43.8233
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:49:33) 
-- CODE:
aresta = 5
area =3/2*(3)**0.5*(5)**2
print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:49:38) 
-- CODE:
aresta = 5
area =3/2*(3)**0.5*(5)**2
print(round(area,4))
-- EXECUTION TIME:
0.151723
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:40:21) 
-- CODE:
aresta = 5
area =3/2*(3)**0.5*(5)**2
print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:40:22) 
-- CODE:
aresta = 5
area =3/2*(3)**0.5*(5)**2
print(round(area,4))
-- EXECUTION TIME:
0.172878
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
